--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "monolog/monolog": ">=1.0.0,<1.2-dev",
+        "php": ">=5.4",
         "silex/silex": "1.0.*@dev",
         "swiftmailer/swiftmailer": "4.1.*",
         "symfony/monolog-bridge": "2.1.*",
