--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "require": {
-        "monolog/monolog": ">=1.0.0,<1.2-dev",
         "php": ">=5.4",
         "silex/silex": "1.0.*@dev",
         "swiftmailer/swiftmailer": "4.1.*",
-        "symfony/monolog-bridge": "2.1.*",
-        "symfony/twig-bridge": "2.1.*",
-        "twig/twig": ">=1.2.0,<2.0-dev"
+        "symfony/monolog-bridge": "~2.1",
+        "symfony/twig-bridge": "~2.1"
     },
     "autoload": {
-        "psr-0": {"Sveta": "src/"}
+        "psr-0": {
+            "Sveta": "src/"
+        }
     }
 }
