--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "require": {
         "php": ">=5.4",
-        "silex/silex": "1.0.*@dev",
-        "swiftmailer/swiftmailer": "4.1.*",
-        "symfony/monolog-bridge": "~2.1",
-        "symfony/twig-bridge": "~2.1"
+        "silex/silex": "~1.0",
+        "swiftmailer/swiftmailer": "~5.0",
+        "symfony/monolog-bridge": "~2.2",
+        "symfony/twig-bridge": "~2.2"
     },
     "autoload": {
         "psr-0": {
