--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 composer.phar
 log/
 vendor/
+
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
