--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,10 @@ APP_SECRET=5cab82cb0684ade96fe1e7658b4d49b9
 # 127.0.0.1,127.0.0.2
 # localhost,example.com
 ###< symfony/framework-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
