--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,8 @@
 # Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+GA_TRACKING_ID=UA-XXX
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=5cab82cb0684ade96fe1e7658b4d49b9
