--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,4 +1,12 @@
 twig:
-    paths: ['%kernel.project_dir%/templates']
+    paths:
+        '%kernel.project_dir%/templates': ~
+        '%kernel.project_dir%/src/Sveta/Resources/views': ~
+        '%kernel.project_dir%/src/Sveta/Resources/views/english': english
+        '%kernel.project_dir%/src/Sveta/Resources/views/french': french
+        '%kernel.project_dir%/src/Sveta/Resources/views/russian': russian
+        '%kernel.project_dir%/src/Sveta/Resources/views/ukrainian': ukrainian
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        ga_tracking_id: '%env(GA_TRACKING_ID)%'
