--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "symfony/dotenv": "^3.4"
+        "symfony/browser-kit": "^3.4",
+        "symfony/css-selector": "^3.4",
+        "symfony/dotenv": "^3.4",
+        "symfony/phpunit-bridge": "^3.4"
     },
     "config": {
         "preferred-install": {
