Update recipes after bumping Symfony

--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ GA_TRACKING_ID=
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f3863e2e53180bc7a160055e1fc39c38
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+APP_SECRET=0a91a812ef1fe570d826642b8c3bbc14
+#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
