--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ composer.phar
 /.env.local
 /.env.local.php
 /.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
