--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,10 +1,5 @@
 twig:
-    paths:
-        '%kernel.project_dir%/templates': ~
-        '%kernel.project_dir%/templates/english': english
-        '%kernel.project_dir%/templates/french': french
-        '%kernel.project_dir%/templates/russian': russian
-        '%kernel.project_dir%/templates/ukrainian': ukrainian
+    default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: null
