--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "symfony/framework-bundle": "^4.4",
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "^4.4",
+        "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "^4.4"
     },
     "require-dev": {
