--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.8",
         "sass-loader": "^11.0.0",
+        "scss-reset": "^1.1.11",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
