--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-composer.phar
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -10,15 +8,14 @@ composer.phar
 /vendor/
 ###< symfony/framework-bundle ###
 
-###> symfony/phpunit-bridge ###
-.phpunit
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
