--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "symfony/yaml": "^4.4"
     },
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4",
-        "symfony/phpunit-bridge": "^4.4"
+        "symfony/css-selector": "^4.4"
     },
     "config": {
         "preferred-install": {
