--- a/composer.json
+++ b/composer.json
@@ -3,19 +3,20 @@
     "description": "my wife's website",
     "require": {
         "php": "^7.3",
-        "symfony/console": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.4",
+        "symfony/console": "^5.3",
+        "symfony/dotenv": "^5.3",
+        "symfony/flex": "^1.13",
+        "symfony/framework-bundle": "^5.3",
+        "symfony/runtime": "^5.3",
         "symfony/swiftmailer-bundle": "^3.5",
-        "symfony/twig-bundle": "^4.4",
+        "symfony/twig-bundle": "^5.3",
         "symfony/webpack-encore-bundle": "^1.11",
-        "symfony/yaml": "^4.4"
+        "symfony/yaml": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^4.4",
-        "symfony/css-selector": "^4.4"
+        "symfony/browser-kit": "^5.3",
+        "symfony/css-selector": "^5.3"
     },
     "config": {
         "preferred-install": {
@@ -47,7 +48,7 @@
         "symfony": {
             "id": "01C0EM3TK8H6VN1CDDPA63Z0VM",
             "allow-contrib": false,
-            "require": "^4.4"
+            "require": "^5.3"
         }
     }
 }
