--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "symfony/css-selector": "^5.3"
     },
     "config": {
+        "platform": {
+            "php": "7.3"
+        },
         "preferred-install": {
             "*": "dist"
         },
