Install symfony/mailer

--- a/.env
+++ b/.env
@@ -24,3 +24,8 @@ APP_SECRET=a3bcc49ced106c6ed79638e5d91c5c6a
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+#MAILER_DSN=smtp://wrt:25?verify_peer=0
+###< symfony/mailer ###
