--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.17",
         "symfony/framework-bundle": "^5.4",
+        "symfony/mailer": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "^5.4",
@@ -50,7 +51,8 @@
         "symfony": {
             "id": "01C0EM3TK8H6VN1CDDPA63Z0VM",
             "allow-contrib": false,
-            "require": "^5.4"
+            "require": "^5.4",
+            "docker": false
         }
     }
 }
