--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
+        "@hotwired/stimulus": "^3.0",
+        "@symfony/stimulus-bridge": "^3.0",
+        "@symfony/webpack-encore": "^1.7",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.8",
         "sass-loader": "^12.1.0",
         "scss-reset": "^1.1.11",
-        "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
