--- a/config/packages/webpack_encore.yaml
+++ b/config/packages/webpack_encore.yaml
@@ -20,8 +20,8 @@ webpack_encore:
     # Preload all rendered script and link tags automatically via the HTTP/2 Link header
     # preload: true
 
-    # Throw an exception if the entrypoints.json file is missing or an entry is missing from the data
-    # strict_mode: false
+    # Set to true to throw an exception if the entrypoints.json file is missing or an entry is missing from the data
+    strict_mode: false
 
     # If you have multiple builds:
     # builds:
@@ -34,6 +34,21 @@ webpack_encore:
     # Put in config/packages/prod/webpack_encore.yaml
     # cache: true
 
+framework:
+    assets:
+        json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
+
 when@prod:
     webpack_encore:
         output_path: '%kernel.project_dir%/public/assets'
+        # Cache the entrypoints.json (rebuild Symfony's cache when entrypoints.json changes)
+        # Available in version 1.2
+        # cache: true
+
+    framework:
+        assets:
+            json_manifest_path: '%kernel.project_dir%/public/assets/manifest.json'
+
+#when@test:
+#    webpack_encore:
+#        strict_mode: false
