Avoid ANSI control characters in GitHub workflow

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -16,6 +16,8 @@ jobs:
   smoke-tests:
     name: "Smoke tests"
     runs-on: "ubuntu-latest"
+    env:
+      COMPOSE_ANSI: never
 
     steps:
     - name: "Checkout"
